# playground

./: .gitignore  README.md  pyproject.toml
configs/backtests/S_E/CHK/: 00_tabular_baselines.yaml  01_ts_baselines.yaml  02_classical_sktime.yaml  (+15 more)
eda/: create_series.ipynb  create_series_2.ipynb  new_data_extract.ipynb  rank_backtests.py  treasury_series_construction_notebook.ipynb  trf_attainability_proof.ipynb
mlops/azureml/: README.md
mlops/azureml/components/: build_gold.yml  build_silver.yml  run_backtest.yml  run_inference.yml  snapshot_dataset.yml
mlops/azureml/endpoints/: daily_inference_deployment.yml  daily_inference_endpoint.yml
mlops/azureml/environments/: diapason-forecasting.yml  environment.yml
mlops/azureml/pipelines/: daily_inference.yml  daily_inference_component.yml  training_backtesting.yml
mlops/azureml/schedules/: daily_inference_schedule.yml  retraining_schedule.yml
src/cash_flow_forecast/: __init__.py
src/cash_flow_forecast/adapters/: __init__.py  base.py
src/cash_flow_forecast/cli/: __init__.py  main.py
src/cash_flow_forecast/contracts/: __init__.py  builders.py  defaults.py  enums.py  rules.py  schema.py
src/cash_flow_forecast/dataset_building/: __init__.py  builder.py  target_transforms.py
src/cash_flow_forecast/eda/: __init__.py  gold_business.py
src/cash_flow_forecast/model_development/: __init__.py  backtest_config.py  backtest_runner.py  backtesting.py
src/cash_flow_forecast/modeling/: __init__.py  base.py  composites.py  features.py  nixtla.py  prediction_intervals.py  registry.py  sktime.py  supervised.py
(+23 files in other folders)
