[project]
name = "cash-flow-forecast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=0.26.0",
    "einops>=0.8.1",
    "gluonts>=0.16.2",
    "hf-xet>=1.2.0",
    "huggingface-hub>=0.36.0",
    "hydra-core>=1.3.2",
    "lightgbm>=4.6.0",
    "lightning>=2.0,<2.6",
    "loguru>=0.7.3",
    "matplotlib>=3.10.9",
    "nbformat>=5.10.4",
    "neuralforecast>=3.1.7",
    "numpy>=1.26,<2",
    "pandas>=2.3,<3",
    "plotly>=6.7.0",
    "pmdarima>=2.1.1",
    "prophet>=1.2,<1.4; python_version < '3.13'",
    "prophetverse>=0.10",
    "pyarrow>=24.0.0",
    "pykan>=0.2",
    "pydantic>=2.13.3",
    "pytorch-forecasting>=1.0,<1.6; python_version < '3.14'",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.7,<1.8",
    "sktime>=0.40.1",
    "statsforecast>=2.0.3",
    "statsmodels>=0.14.6",
    "tbats>=1.1.3",
    "transformers>=4.57.0",
    "xgboost>=3.2.0",
]

[project.scripts]
build-silver = "cash_flow_forecast.cli.main:build_silver_main"
build-gold = "cash_flow_forecast.cli.main:build_gold_main"
snapshot-dataset = "cash_flow_forecast.cli.main:snapshot_dataset_entrypoint"
run-backtest = "cash_flow_forecast.cli.main:run_backtest_entrypoint"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
